syntax = "proto3";
package greeter;
option go_package = "greeterpb";

message Greet {
  string first_name = 1;
  string last_name = 2;
}

message GreetRequest {
  Greet greeter = 1;
}

message GreetResponse {
  string result = 1;
}

service GreeterService {
  rpc Greet(GreetRequest) returns (GreetResponse) {};
}